--- a/day-4/form.html
+++ b/day-4/form.html
@@ -41,15 +41,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">My Project</a>
+              <a class="nav-link" href="my-projects.html">My Project</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-light d-flex">Contact Me</button>
+          <a href="form.html" class="btn btn-light d-flex">Contact me</a>
         </div>
       </div>
     </nav>
