--- a/day-4/index.html
+++ b/day-4/index.html
@@ -45,7 +45,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">My Project</a>
+            <a class="nav-link" href="my-projects.html">My Project</a>
           </li>
         </ul>
         <a href="form.html" class="btn btn-light d-flex">Contact me</a>
