--- a/day-5/my-projects.html
+++ b/day-5/my-projects.html
@@ -139,19 +139,24 @@
     </section>
     <!-- CARD FORM -->
 
-    <!-- CARD LIST -->
-    <!-- CARD -->
+    <!-- CARD ISI LIST FORM -->
     <section
       class="card p-md-5 my-5 mx-auto bg-black text-white"
-      style="max-width: 700px"
+      style="max-width: 1250px"
     >
-      <div class="mb-4">
-        <h5 class="card-title" id="hasilFormSubject"></h5>
-        <p id="hasilFormDescription"></p>
+      <div class="mb-5">
+        <h5 class="card-title text-center">My Projects</h5>
+        <p class="card-body text-center">
+          Berikut adalah daftar project yang telah ditambahkan
+        </p>
+      </div>
+      <div>
+        <div id="contents" class="d-flex flex-wrap justify-content-center gap-4">
+          <!-- ISI LIST FORM DARI JAVASCRIPT -->
+        </div>
       </div>
     </section>
-    <!-- CARD -->
-    <!-- CARD LIST -->
+    <!-- CARD ISI LIST FORM< -->
 
     <!-- Javascript -->
     <script src="utils/index.js"></script>
